force-app/main/default/objects/Insurance_PolicyHolder__c/Insurance_PolicyHolder__c.object-meta.xml
<CustomObject>
    <label>Insurance PolicyHolder</label>
    <nameField>
        <label>Insurance PolicyHolder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance PolicyHolders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>