force-app/main/default/objects/Insurance_PolicyHolder__c/fields/Insurance_Customer__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Customer</label>
    <referenceTo>Insurance_Customer__c</referenceTo>
    <relationshipLabel>Insurance PolicyHolders</relationshipLabel>
    <relationshipName>Insurance_PolicyHolders</relationshipName>
    <type>Lookup</type>
</CustomField>