force-app/main/default/objects/Insurance_PolicyHolder__c/fields/Payment_Mathod__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mathod__c</fullName>
    <label>Payment Mathod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blockchain Wallet</fullName>
                <default>true</default>
                <label>Blockchain Wallet</label>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Card Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>