force-app/main/default/objects/Insurance_PolicyHolder__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case created for payment</fullName>
                <default>true</default>
                <label>Case created for payment</label>
            </value>
            <value>
                <fullName>Payment Initiated</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
                <label>Case created for Renew</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>